邀请码生成功能

--- a/app/views/about/service.html.slim
+++ b/app/views/about/service.html.slim
@@ -10,7 +10,7 @@
     p （二）在合同有效期内，创业赢平台有权随时修改本协议条款和条件，并只需公示于其网站，而无需征得您的 事先同意。修改后的条款应于公示即时生效。在创业赢平台修改服务条款后，您继续使用服务应被视作您已接 受了修改后的条款。
     p （三）除非得到创业赢平台的书面授权，任何人将不得修改本协议。
     /! TODO 公司名字
-    p （四）创业赢平台提供的网络服务的所有权和最终解释权归创业赢有限公司所有。 本协议中，被许可使用创业赢平台服务的用户均简称为“用户”。
+    p （四）创业赢平台提供的网络服务的所有权和最终解释权归创业赢网络有限公司所有。 本协议中，被许可使用创业赢平台服务的用户均简称为“用户”。
 
     h4 第二条 服务内容
     p （一）在用户同意遵守本协议条款前提下，用户有权在创业赢平台网站指定位置上发布符合中国各项法律法规 及规范性文件以及创业赢平台网站服务条款要求的信息。
