--- a/app/views/layouts/admin/application.html.slim
+++ b/app/views/layouts/admin/application.html.slim
@@ -17,5 +17,6 @@ html
       = render 'layouts/admin/navigation'
     main role="main" 
       .dashboard
+        = render 'layouts/flashes'
         = yield
       = render 'layouts/foot'
