--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -8,7 +8,7 @@
         p 真正的互联网式的创业服务
         .row
           .small-12.medium-8.large-7.columns
-            = text_field_tag 'name', nil, placeholder: '真实姓名', 'ng-model'=> 'name', 'ng-class'=> '{ error: errors.name }', 'ng-blur'=> ' delete_error_on("name") '
+            = text_field_tag 'name', nil, placeholder: '真实姓名', 'ng-model'=> 'name', 'ng-class'=> '{ error: errors.name }', 'ng-keyup'=> ' delete_error_on("name") '
             small.error.ng-cloak ng-show="errors.name" {{ errors.name }}
         .row
           .small-12.medium-8.large-7.columns
@@ -16,12 +16,17 @@
             small.error.ng-cloak ng-show="errors.email" {{ errors.email }}
         .row
           .small-12.medium-8.large-7.columns
-            = password_field_tag 'password', nil, placeholder: '密码', 'ng-model'=> 'password', 'ng-class'=> '{ error: errors.password }', 'ng-blur'=> ' delete_error_on("password") '
+            = password_field_tag 'password', nil, placeholder: '密码', 'ng-model'=> 'password', 'ng-class'=> '{ error: errors.password }', 'ng-keyup'=> ' delete_error_on("password") '
             small.error.ng-cloak ng-show="errors.password" {{ errors.password }}
         .row
           .small-12.medium-8.large-7.columns
             = password_field_tag 'password_confirm', nil, placeholder: '再次确认密码', 'ng-model'=> 'password_confirm', 'ng-class'=> '{ error: errors.password_confirm }', 'ng-blur'=> 'password_confirm_validate()'
             small.error.ng-cloak ng-show="errors.password_confirm" {{ errors.password_confirm }}
+        - if bit_enable?
+          .row
+            .small-12.medium-8.large-7.columns
+              = text_field_tag 'code', nil, placeholder: '邀请码', 'ng-model'=> 'code', 'ng-class'=> '{ error: errors.code }', 'ng-keyup'=> 'delete_error_on("code")'
+              small.error.ng-cloak ng-show="errors.code" {{ errors.code }}
         p.alert.ng-cloak
           |{{ error_message }}
         = submit_tag '马上注册', class: 'button', 'ng-disabled'=> '! submit_validate() '
