--- a/app/views/layouts/_foot.html.slim
+++ b/app/views/layouts/_foot.html.slim
@@ -12,3 +12,7 @@
       = link_to "法律法规", law_about_index_path
     .small-12.large-2.columns
       = link_to "人才招聘", job_about_index_path
+  .row
+    .small-12.columns.checkin
+      | ©2014 创业赢科技 
+      | 粤ICP备14044624号
