--- a/app/views/investors/prove.html.slim
+++ b/app/views/investors/prove.html.slim
@@ -15,6 +15,14 @@
       input type='file' id='card_upload' ng-file-select='upload($files)'
       small.error.ng-cloak ng-show=' card_error ' {{ card_error }}
 
+      .row
+        .small-12.medium-8.columns
+          .image-wrapper
+            img ng-src='{{ bank_statement_url }}'
+      label for='bank_statement_upload' 上传你的银行流水
+      input type='file' id='bank_statement_upload' ng-file-select='upload_bank_statement($files)'
+      small.error.ng-cloak ng-show='bank_statement_error' {{ bank_statement_error }}
+
       p.investor-info-query
         | 当前申请表状态:
         em
@@ -25,6 +33,6 @@
           .control-actions
             button ng-show='#{@investor.status == "passed"}' disabled='' 你的申请已经通过了
             button ng-show='#{@investor.status == "applied"}' disabled='' 已经提交, 请耐心等待
-            button ng-show='#{@investor.status == "drafted"}' ng-disabled='! can_submit' ng-click='submit()' 提交审核
-            button ng-show='#{@investor.status == "rejected"}' ng-disabled='! can_submit' ng-click='submit()' 再次提交审核
+            button ng-show='#{@investor.status == "drafted"}' ng-disabled='! can_submit()' ng-click='submit()' 提交审核
+            button ng-show='#{@investor.status == "rejected"}' ng-disabled='! can_submit()' ng-click='submit()' 再次提交审核
             a.back ng-click='prev()' 上一步
