货币显示优化

--- a/app/assets/javascripts/angularjs.js.coffee.erb
+++ b/app/assets/javascripts/angularjs.js.coffee.erb
@@ -1,5 +1,6 @@
 #= require angular-file-upload-shim
 #= require angular
+#= require angular-locale_zh-cn
 #= require angular-cookie
 #= require angular-resource
 #= require angular-route
