--- a/app/assets/templates/directives/money_require.html.slim
+++ b/app/assets/templates/directives/money_require.html.slim
@@ -9,8 +9,7 @@
         .sub-title
           | 融资规模
         h5.sub-content 
-          | ¥ 
-          | {{ require.money }}
+          | {{ require.money | currency }}
     li
       .box
         .sub-title
@@ -48,7 +47,7 @@
         .sub-title
           | 融资进度
         h5.sub-content
-          | ¥ {{ require.syndicate_money }}
+          | {{ require.syndicate_money | currency }}
       .box ng-show = 'require.success != null'
         .sub-title
           | 融资成败
