--- a/app/views/projects/invest.html.slim
+++ b/app/views/projects/invest.html.slim
@@ -37,7 +37,7 @@
                   a ng-href="/users/{{ investment.user.id }}"
                     | {{ investment.user.name }}
                 .money
-                  | {{ investment.money | currency }}
+                  | {{ investment.money | nfcurrency }}
                 .time
                   | 投资于 
                   | {{ investment.created_at }}
