支持股票期权 0%, 月薪显示优化

--- a/app/assets/templates/project/require.html.slim
+++ b/app/assets/templates/project/require.html.slim
@@ -49,8 +49,7 @@
                 tr
                   td 报酬
                   td
-                    | ¥ 
-                    |{{ person_require.pay }}
+                    |{{ person_require.pay | nfcurrency }}
                 tr
                   td 期权
                   td
