--- a/app/assets/stylesheets/project_edit.css.scss
+++ b/app/assets/stylesheets/project_edit.css.scss
@@ -5,6 +5,14 @@
     padding-bottom: 1rem;
   }
 
+  .tips {
+    background-color: #F3F3DC;
+    color: #888;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+  }
+
   .image-edit {
     list-style: none;
     margin-left: 0;
