--- a/app/views/users/_head.html.slim
+++ b/app/views/users/_head.html.slim
@@ -21,13 +21,11 @@
             .edit
               = link_to '编辑', settings_profile_path
     - if current_user && current_user != @user
-      ul.small-block-grid-2.list.ng-cloak ng-controller='FunsController' ng-init='init(#{@user.id}, #{current_user.fun?(@user)})'
+      ul.small-block-grid-1.operate.ng-cloak ng-controller='FunsController' ng-init='init(#{@user.id}, #{current_user.fun?(@user)})'
         li 
           a ng-hide='loading || is_fun' ng-click='add_fun()' 关注
           a ng-show='!loading && is_fun' ng-click='remove_fun()' 取消关注
-          a ng-show='loading' ng-click='add_fun()' loading
-        li
-          a href='#' 约谈
+          a ng-show='loading' loading
     ul.small-block-grid-4.tab-content
       li.list
         = link_to '最近动态', user_path(@user), class: active_for(type, :activity)
