--- a/app/views/money_requires/admin.html.slim
+++ b/app/views/money_requires/admin.html.slim
@@ -48,6 +48,10 @@
             small.error ng-show='money_require.errors.share' {{ money_require.errors.share }}
           .small-1.large-1.end.columns
             span.postfix %
+        label for='prevalue' 融资前估值( 自动计算 )
+        .row.collapse
+          .small-11.medium-8.large-6.end.columns
+            input type='text' id='money' ng-value='prevalue() | nfcurrency' disabled='' 
         label for='deadline' 融资周期
         .row.collapse
           .small-11.medium-3.columns
@@ -95,6 +99,10 @@
                     small.error ng-show='money_require.errors.share' {{ money_require.errors.share }}
                   .small-1.large-1.end.columns
                     span.postfix %
+                label for='prevalue' 融资前估值( 自动计算 )
+                .row.collapse
+                  .small-11.medium-8.large-6.end.columns
+                    input type='text' id='money' ng-value='prevalue() | nfcurrency' disabled='' 
                 label for='deadline' 融资周期
                 .row.collapse
                   .small-11.medium-3.columns
