--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -53,6 +53,12 @@
                   | 你的投资人
                   = link_to '申请表', info_investors_path
                   | 没有通过, 请点击链接查看详细原因.
+                - when Message::TALK
+                  - user = message.target.user
+                  = link_to user.name, user
+                  | 向你的项目
+                  = link_to message.project.name, message.project
+                  | 发起了约谈邀请, 请到你的注册邮箱回复.
               span.time
                 | #{time_ago_in_words(message.created_at)}前
       
