--- a/app/views/projects/_head.html.slim
+++ b/app/views/projects/_head.html.slim
@@ -14,3 +14,5 @@
         i.fi-list-thumbnails
         span.category
           | #{@project.categories_name}
+      .status
+        | #{format_status(@project.vstatus)}
