投递项目功能

--- a/app/views/investors/_investor.html.slim
+++ b/app/views/investors/_investor.html.slim
@@ -16,3 +16,31 @@
           | 投资领域:
           span.industry
             | #{investor.investidea.industry}
+      .op ng-controller='DeliverProjectController'
+        button.small ng-click='open_deliver_project_modal(#{investor.user_id})' 投递项目
+        script type='text/ng-template' id='deliver_project_modal.html'
+          .row.deliver-project-modal
+            a.close-reveal-modal ng-click="cancel()" ×
+            .small-12.columns
+              h3
+                | 投递项目给 
+                span.ng-cloak
+                  | {{ delivered_user_info.name }}
+              hr
+              .wrapper ng-hide=' is_delivering_projects_empty() '
+                p 请选择投递项目
+                ul.small-block-grid-3.medium-block-grid-5
+                  li ng-repeat=' project in delivering_projects '
+                    .delivering-project ng-class= '{ select: selected_project == project }' ng-click='select_project(project)'
+                      img ng-src=' {{ project.logo_url }}'
+                      span.fi-check ng-show=' selected_project == project '
+                      | {{ project.name }}
+              p.no-content ng-show=' is_delivering_projects_empty() '
+                | 你还没有项目, 不能投递, 点击
+                = link_to ' 这里 ', new_project_path
+                | 创建.
+              hr
+              p.ng-cloak.alert
+                | {{ deliver_error }}
+              button ng-click='deliver()' 开始投递
+              a.back ng-click='cancel()' 取消
