--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,11 @@ html
     = javascript_include_tag "vendor/modernizr"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    link href="/favicon.ico" rel="shortcut icon"
+    link href="/icons/57x57.jpg" rel="apple-touch-icon-precomposed" sizes="57x57"
+    link href="/icons/72x72.jpg" rel="apple-touch-icon-precomposed" sizes="72x72"
+    link href="/icons/114x114.jpg" rel="apple-touch-icon-precomposed" sizes="114x114"
+    link href="/icons/144x144.jpg" rel="apple-touch-icon-precomposed" sizes="144x144"
   body ng-app="app"
     - if current_user
       .off-canvas-wrap
