首页热门项目的数据补充

--- a/app/assets/stylesheets/components/link.css.scss
+++ b/app/assets/stylesheets/components/link.css.scss
@@ -1,3 +1,14 @@
 .margin-link {
   margin-left: 0.5rem;
 }
+
+.margin-link-wrapper {
+  a:first {
+    margin-left: 0;
+  }
+
+  a {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+}
