--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -21,41 +21,83 @@
     .small-12.columns
       h2 正在融资的项目
       ul.small-block-grid-1.medium-block-grid-3
-        - 3.times do
-          li 
-            .box
-              .head
-                .row
-                  .small-5.columns
-                    = image_tag 'xingbake.jpg'
-                  .small-7.columns
-                    h5 星克巴
-                .subtitle 一个咖啡馆
-              .content
-                .tag
+        - 3.times do |i|
+          - recommend = @recommends[i]
+          - project = @recommends[i].project
+          - if project.present?
+            li 
+              .box.project
+                .head
                   .row
-                    .small-4.columns
-                      .type
-                        | 创始人
-                    .small-8.columns
-                      .item.right
-                        | YafeiLee
-                .tag
+                    .small-4.medium-5.columns
+                      = link_to project do
+                        - image_tag project.logo.image_url
+                    .small-8.medium-7.columns
+                      = link_to project do
+                        h5 #{project.name}
+                  .subtitle #{project.oneword}
+                .content
+                  .tag
+                    .row
+                      .small-5.columns
+                        .type
+                          | 创始人
+                      .small-7.columns
+                        .item.right
+                          = link_to project.owner.name, project.owner
+                  .tag
+                    .row
+                      .small-5.columns
+                        .type
+                          | 团队
+                      .small-7.columns
+                        .item.right.margin-link-wrapper
+                          = link_to project.members.size, team_project_path(project)
+                          | 人
+                  - if (leader = project.opened_money_require.leader).present?
+                    .tag
+                      .row
+                        .small-4.columns
+                          .type
+                            | 领投人
+                        .small-8.columns
+                          .item.right
+                            = link_to leader.name, leader
+          - else
+            li 
+              .box
+                .head
                   .row
-                    .small-4.columns
-                      .type
-                        | 创始人 
-                    .small-8.columns
-                      .item.right
-                        | YafeiLee
-                .tag
-                  .row
-                    .small-4.columns
-                      .type
-                        | 创始人
-                    .small-8.columns
-                      .item.right
-                        | YafeiLee
+                    .small-5.columns
+                      = image_tag 'xingbake.jpg'
+                    .small-7.columns
+                      h5 空缺中
+                  .subtitle 
+                .content
+                  .tag
+                    .row
+                      .small-4.columns
+                        .type
+                          | 创始人
+                      .small-8.columns
+                        .item.right
+                          | 无
+                  .tag
+                    .row
+                      .small-4.columns
+                        .type
+                          | 团队
+                      .small-8.columns
+                        .item.right
+                          | 无
+                  .tag
+                    .row
+                      .small-4.columns
+                        .type
+                          | 领投人
+                      .small-8.columns
+                        .item.right
+                          | 无
       .text-center
         = link_to '查看所有项目', all_explore_index_path
 hr
