--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -47,6 +47,22 @@
     border-radius: 10rem;
   }
 
+  .head {
+    min-height: 6.5rem;
+  }
+
+  .investor .content {
+    text-align: center;
+    .tag {
+      color: #999;
+      font-size: 95%;
+    }
+
+    .investments * {
+      color: #666;
+    }
+  }
+
   .box {
     margin: 1rem;
     padding: 1rem 2rem;
@@ -73,7 +89,11 @@
       }
       .item {
         color: #666;
-        font-weight: 200;
+        white-space: nowrap;
+        width: 100%;
+        text-align: right;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
