首页标题处理

--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -4,8 +4,9 @@
       form ng-submit='submit()' ng-controller='HomeController'
         .row
           .small-12.large-6.columns
-            h1.heading 创业, 找钱, 找人, 更容易, 更简单
-            p.sub-heading 投资人, 小伙伴, 都在等着你的创业项目. 想要像互联网式的创业融资与招人服务? 马上注册.
+            p
+              h2.heading  欢迎来到创业赢
+            h4.sub-heading 在这里，以最简单的方式最快速探索你需要的创业元素
 
           .small-12.medium-8.large-6.end.columns
             = text_field_tag 'name', nil, placeholder: '你的真实姓名', 'ng-model'=> 'name'
