home page title changed

--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -6,7 +6,7 @@
           .small-12.large-6.columns
             p
               h2.heading  欢迎来到创业赢
-            h4.sub-heading 在这里，以最简单的方式最快速探索你需要的创业元素
+            h4.sub-heading 在这里，以最简单的方式，快速探索你需要的创业元素
 
           .small-12.medium-8.large-6.end.columns
             = text_field_tag 'name', nil, placeholder: '你的真实姓名', 'ng-model'=> 'name'
