recommend empty error fix

--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -24,8 +24,8 @@
       ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3
         - 3.times do |i|
           - recommend = @recommends[i]
-          - project = @recommends[i].project
-          - if project.present?
+          - if recommend.present?
+            - project = @recommends[i].project
             li 
               .box.project
                 .head
