--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -24,7 +24,7 @@
       ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3
         - 3.times do |i|
           - recommend = @recommends[i]
-          - if recommend.present?
+          - if ! recommend.present?
             - project = @recommends[i].project
             li 
               .box.project
@@ -66,11 +66,11 @@
                             = link_to leader.name, leader
           - else
             li 
-              .box
+              .box.project
                 .head
                   .row
                     .small-5.columns
-                      = image_tag 'xingbake.jpg'
+                      = image_tag 'default-project.jpg'
                     .small-7.columns
                       h5 空缺中
                   .subtitle  -
@@ -206,7 +206,7 @@ hr
                 .head
                   .row
                     .small-5.columns
-                      = image_tag 'xingbake.jpg'
+                      = image_tag 'default-project.jpg'
                     .small-7.columns
                       h5 空缺中
                   .subtitle -
