--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -143,7 +143,7 @@ hr
                 .head
                   .row
                     .small-4.medium-5.columns
-                      = image_tag 'default.png'
+                      = image_tag 'default-people.jpg'
                     .small-8.medium-7.columns
                       h6 空缺中
                 .content
