--- a/app/views/layouts/admin/_navigation.html.slim
+++ b/app/views/layouts/admin/_navigation.html.slim
@@ -17,6 +17,8 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
         = link_to "精品管理", admin_recommends_path
       li class=active_for('admin/invite_codes', params[:controller])
         = link_to "邀请码管理", admin_invite_codes_path
+      li class=active_for('admin/law_iterms', params[:controller])
+        = link_to "法律条款管理", admin_law_iterms_path 
     ul.right
       li
         = link_to "返回前台", root_path
