未登录时添加投资人页面

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -46,6 +46,8 @@ html
               li
                 = link_to '精品', refine_index_path
               li
+                = link_to '投资人', investors_path
+              li
                 = link_to '参与创业', jobs_path
               li
                 = link_to '登录', new_user_session_path, class: 'login-button'
